--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://drive.google.com/file/d/189pF4n2EFW1IFE6LFP5G_j4jlf3LoTsV/view?usp=sharing">Download Now</a>
+    <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/scl/fi/v3vpcjlinb944uiwblkkt/manifest.plist?rlkey=kntk77bvwtoxfwe0xi196ku0k&st=518pd9p7&dl=0">Download This</a>
 </body>
 </html>
