--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://www.dropbox.com/scl/fi/v3vpcjlinb944uiwblkkt/manifest.plist?rlkey=kntk77bvwtoxfwe0xi196ku0k&st=518pd9p7&dl=0">Download This</a>
+    <a href="itms-services://?action=download-manifest&url=https://ios-app-download.vercel.app/manifest.plist">Download App</a>
 </body>
 </html>
