--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="itms-services://?action=download-manifest&url=https://ios-app-download.vercel.app/manifest.plist">Download New Appsss</a>
+    <a href="itms-services://?action=download-manifest&url=https://ios-app-download.vercel.app/manifest.plist">Download the App</a>
 </body>
 </html>
